# jardinier

./: .dockerignore  README.rst
.github/workflows/: test.yml
deploy/: jardinier-backend.service  nginx.conf
docker/: DockerfileBackend  DockerfileFrontend  docker-compose.dev.yaml  docker-compose.yaml  nginx.conf
jardinier-backend/: pyproject.toml
jardinier-backend/docs/: db.rst  fastapi.rst
jardinier-backend/src/: alembic.ini  main.py  test.py
jardinier-backend/src/jardinier/: backend.py  settings.py
jardinier-backend/src/jardinier/alembic/: env.py
jardinier-backend/src/jardinier/alembic/versions/: c1faef99181b_.py
jardinier-backend/src/jardinier/database/: a.py  measure.py
jardinier-backend/src/jardinier/graphql/: schema.py
jardinier-backend/src/jardinier/graphql/mutations/: a.py
jardinier-backend/src/jardinier/graphql/queries/: a.py
jardinier-backend/src/jardinier/graphql/types/: generated.py
jardinier-backend/src/jardinier/utils/: helpers.py
jardinier-backend/src/tests/: conftest.py
jardinier-frontend/: angular.json  package-lock.json  package.json
jardinier-frontend/src/: index.html
jardinier-frontend/src/app/: app.component.spec.ts  app.config.ts  models.ts
jardinier-frontend/src/app/components/index/: index.component.html  index.component.scss  index.component.ts
jardinier-frontend/src/app/models/: fragments.ts  queries.ts
jardinier-frontend/src/app/services/: api.service.ts
