[project]
name = "jardinier"
version = "1.0.0"
description = "Backend of the website Template."
requires-python = ">=3.12"
license = { text = "CC BY-NC-SA 4.0" }
authors = [
    { name = "Vincent 'Philaeux' LAMOTTE", email = "vinc.lamotte@gmail.com" }
]
dependencies = [
    "psycopg[binary]>=3.1.12",
    "alembic>=1.13.1",
    "SQLAlchemy>=2.0.39",
    "fastapi[all]>=0.115.11",
    "strawberry-graphql>=0.262.5",
    "python-jose[pycryptodome]>=3.3.0",
    "requests>=2.31.0",
    "uvicorn>=0.34.0",
    "adafruit-blinka>=8.56.0",
    "adafruit-circuitpython-ahtx0>=1.0.25",
    "rpi-gpio>=0.7.1",
    "strawchemy>=0.8.0",
    "apscheduler>=3.11.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "enum-tools[sphinx]>=0.12.0",
]
tests = [
    "pytest>=8.0.1",
    "pytest-asyncio>=0.23.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

